(BETA) Simplify compiling with/without lombok (#46)
* Updated reusable compiler compatible with 25

* Added patched module

* Attempt 3 with buildout

* Cleanup

* Fixed lombok method finding

* Fixed reference on overriden interface not showing

* Revert errorprovider changes

* Updated needFresh to behave correctly after changes

* Fixed lombok unused fields (not stable but good enough)

* Deleted unused patches

* Deleted patches

* Refactoring - definitionprovider

* Simplify definition drastically

* Inline decompiler logic

* Delete unused import

* Fine logs instead of info

* Simplify referenceprovider (still in testing)

* Handle AP enabled in edge cases

* Filter lombok log errors

* Refactoring: buildmanager

* Fixed array parsetyperesolver

* Fixed missing flow() compiler

* Proper handling of multi modules

* Inline definition parsing

* cleanup

* cleanup

* Simplify multi module handling

* Added record to navigationhelper

* Handle AP diagnostics better

* Changes

- different way of handling reusable compiler
- diagnostics handling for lombok
- and others..

* Cleanup logs and fix output dir for tests

* Dont hardcode output dir

* Fixed record references

* Fixed optional dependency scanning

* Minor cleanups

* Minor cleanups

* Delete dead code in completion provider iterating package private top level types

* INFO level log

* Changes

- fixed argX in hover/signature from jars
- clean up dead code
- fixed "missing return statement" for lombok projects (was missing)

* Better handling of multi module index parsing

---------

Co-authored-by: Delice0 <59118341+Delice0@users.noreply.github.com>