@@ -2,12 +2,13 @@ package org.javacs;
 
 import com.sun.source.tree.*;
 import com.sun.source.util.*;
+import com.sun.tools.javac.api.JavacTaskImpl;
+import com.sun.tools.javac.main.JavaCompiler;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
-import java.util.concurrent.atomic.AtomicLong;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import javax.lang.model.element.Modifier;
@@ -16,19 +17,8 @@ import javax.tools.*;
 
 public class CompileBatch implements AutoCloseable {
     private static final Logger LOG = Logger.getLogger("main");
-    private static final AtomicLong FULL_BATCHES = new AtomicLong();
-    private static final AtomicLong ANALYZE_INVOCATIONS = new AtomicLong();
-    private static final AtomicLong AP_ENABLED_BATCHES = new AtomicLong();
-
-    enum AnalysisMode {
-        ATTR,
-        FULL
-    }
 
     final JavaCompilerService parent;
-    final ReusableCompiler.SlotContext slot;
-    final ReusableCompiler.Borrow borrow;
-    /** Indicates the task that requested the compilation is finished with it. */
     boolean closed;
 
     final JavacTask task;
@@ -36,172 +26,85 @@ public class CompileBatch implements AutoCloseable {
     final Elements elements;
     final Types types;
     final List<CompilationUnitTree> roots;
-    final Map<Path, CompileTask.SourceStamp> sourceStamps;
-    final AnalysisMode analysisMode;
-    final boolean annotationProcessingEnabled;
-    final long parseMs;
-    final long enterMs;
-    final long analyzeMs;
-
-    CompileBatch(
-            JavaCompilerService parent,
-            Collection<? extends JavaFileObject> files,
-            boolean allowAP,
-            AnalysisMode analysisMode,
-            ReusableCompiler.SlotContext slot,
-            List<String> options) {
+    final List<Diagnostic<? extends JavaFileObject>> diagnostics;
+    CompileBatch(JavaCompilerService parent, Collection<? extends JavaFileObject> files) {
         this.parent = parent;
-        this.slot = slot;
-        this.task =
-                slot == null
-                        ? parent.compiler.createSingleUseTask(parent.fileManager, parent.diags::add, options, files)
-                        : parent.compiler.createTask(slot, parent.fileManager, parent.diags::add, options, files);
-        this.borrow = new ReusableCompiler.Borrow(parent.compiler, slot, task);
-        this.trees = Trees.instance(task);
-        this.elements = task.getElements();
-        this.types = task.getTypes();
-        this.roots = new ArrayList<>();
-        this.sourceStamps = collectSourceStamps(files);
-        this.analysisMode = analysisMode;
-        this.annotationProcessingEnabled = allowAP;
+        LOG.info("[compile] CompileBatch — starting compile of " + files.size() + " file(s)");
+        parent.diags.clear();
+        var options = options(parent.classPath, parent.addExports, parent.extraArgs);
 
-        long parseNanos = 0;
-        long enterNanos = 0;
-        long analyzeNanos = 0;
+        // single mutable holder to extract result from worker lambda
+        var holder = new Object() {
+            JavacTask task;
+            Trees trees;
+            Elements elements;
+            Types types;
+            List<CompilationUnitTree> roots;
+        };
 
-        try {
-            var parseStarted = System.nanoTime();
-            for (var t : task.parse()) {
-                roots.add(t);
-            }
-            parseNanos = System.nanoTime() - parseStarted;
+        parent.compiler.compile(
+                parent.fileManager,
+                parent.diags::add,
+                options,
+                files,
+                task -> {
+                    holder.task = task;
+                    holder.trees = Trees.instance(task);
+                    holder.elements = task.getElements();
+                    holder.types = task.getTypes();
+                    holder.roots = new ArrayList<>();
+                    try {
+                        for (var t : task.parse()) {
+                            holder.roots.add(t);
+                        }
+                        try {
+                            var impl = (JavacTaskImpl) task;
+                            impl.enter();
+                            var compiler = JavaCompiler.instance(impl.getContext());
+                            var attr = compiler.attribute(compiler.todo);
+                            compiler.flow(attr);
+                        } catch (Throwable e) {
+                            LOG.warning("[compiler] analyze failed: "
+                                    + e.getClass().getName() + ": " + e.getMessage());
+                        }
+                    } catch (IOException e) {
+                        throw new RuntimeException(e);
+                    }
+                    return null;
+                });
 
-            var analyzeStarted = System.nanoTime();
-            // In ATTR mode, catch and ignore the JDK 25 NPE in Types.sideCast.
-            // This NPE occurs in Check.validate during type-argument bound checking,
-            // which is not needed for definition/hover (only symbol resolution matters).
-            if (analysisMode == AnalysisMode.ATTR) {
-                try {
-                    task.analyze();
-                } catch (Throwable attrError) {
-                    // Attribution may have partially completed — symbols resolved before
-                    // the crash are still usable for definition/hover.
-                    LOG.fine("[compiler] ATTR analyze partial failure (continuing): "
-                            + attrError.getClass().getSimpleName());
-                }
-            } else {
-                task.analyze();
-            }
-            analyzeNanos = System.nanoTime() - analyzeStarted;
-            if (analysisMode == AnalysisMode.FULL) {
-                ANALYZE_INVOCATIONS.incrementAndGet();
-            }
-        } catch (IOException e) {
-            try {
-                borrow.close();
-            } catch (Exception closeError) {
-                LOG.fine("Failed to release task after IOException: " + closeError.getMessage());
-            }
-            throw new RuntimeException(e);
-        } catch (Throwable e) {
-            // Always try to release the task, but don't let cleanup errors mask the original error
-            try {
-                borrow.close();
-            } catch (Exception closeError) {
-                LOG.fine("Failed to release task after compilation error: " + closeError.getMessage());
-            }
-
-            // For other errors, wrap in RuntimeException
-            if (e instanceof RuntimeException) {
-                throw (RuntimeException) e;
-            }
-            throw new RuntimeException("Compilation failed: " + e.getMessage(), e);
-        } finally {
-            this.parseMs = parseNanos / 1_000_000;
-            this.enterMs = enterNanos / 1_000_000;
-            this.analyzeMs = analyzeNanos / 1_000_000;
-            if (analysisMode == AnalysisMode.FULL) {
-                FULL_BATCHES.incrementAndGet();
-            }
-            if (allowAP) {
-                AP_ENABLED_BATCHES.incrementAndGet();
-            }
-            logPhaseTimings(files.size(), analysisMode, parseNanos, enterNanos, analyzeNanos);
-        }
+        this.task = holder.task;
+        this.trees = holder.trees;
+        this.elements = holder.elements;
+        this.types = holder.types;
+        this.roots = holder.roots;
+        this.diagnostics = new ArrayList<>(parent.diags);
     }
 
-    public static void resetPerfCounters() {
-        FULL_BATCHES.set(0);
-        ANALYZE_INVOCATIONS.set(0);
-        AP_ENABLED_BATCHES.set(0);
-    }
-
-    public static PerfCounters perfCounters() {
-        return new PerfCounters(
-                FULL_BATCHES.get(),
-                ANALYZE_INVOCATIONS.get(),
-                AP_ENABLED_BATCHES.get());
-    }
-
-    public static class PerfCounters {
-        public final long fullBatches;
-        public final long analyzeInvocations;
-        public final long apEnabledBatches;
-
-        PerfCounters(
-                long fullBatches,
-                long analyzeInvocations,
-                long apEnabledBatches) {
-            this.fullBatches = fullBatches;
-            this.analyzeInvocations = analyzeInvocations;
-            this.apEnabledBatches = apEnabledBatches;
-        }
-    }
-
-    private void logPhaseTimings(
-            int sourceCount, AnalysisMode mode, long parseNanos, long enterNanos, long analyzeNanos) {
-        LOG.fine(
-                String.format(
-                        "[perf] javac_phases mode=%s sources=%d parse=%dms enter=%dms analyze=%dms",
-                        mode.name().toLowerCase(),
-                        sourceCount,
-                        parseNanos / 1_000_000,
-                        enterNanos / 1_000_000,
-                        analyzeNanos / 1_000_000));
-    }
-
-    private Map<Path, CompileTask.SourceStamp> collectSourceStamps(Collection<? extends JavaFileObject> files) {
-        var result = new HashMap<Path, CompileTask.SourceStamp>();
-        for (var file : files) {
-            var uri = file.toUri();
-            if (uri == null || !"file".equals(uri.getScheme())) continue;
-            Path path;
-            try {
-                path = Paths.get(uri);
-            } catch (RuntimeException ignored) {
-                continue;
-            }
-            result.put(path, new CompileTask.SourceStamp(file.getLastModified(), FileStore.contentHash(path)));
-        }
-        return result;
-    }
-
-    /**
-     * If the compilation failed because javac didn't find some package-private files in source files with different
-     * names, list those source files.
-     */
     Set<Path> needsAdditionalSources() {
-        // Check for "class not found errors" that refer to package private classes
         var addFiles = new HashSet<Path>();
         for (var err : parent.diags) {
-            if (!err.getCode().equals("compiler.err.cant.resolve.location")) continue;
-            if (!isValidFileRange(err)) continue;
-            var className = errorText(err);
-            var packageName = packageName(err);
-            if (packageName != null) {
-                var location = findPackagePrivateClass(packageName, className);
-                if (location != FILE_NOT_FOUND) {
-                    addFiles.add(location);
+            var code = err.getCode();
+            if (code.equals("compiler.err.cant.resolve.location")) {
+                if (!isValidFileRange(err)) continue;
+                var className = errorText(err);
+                var pkg = packageName(err);
+                if (pkg != null) {
+                    var location = findPackagePrivateClass(pkg, className);
+                    if (location != FILE_NOT_FOUND) {
+                        addFiles.add(location);
+                    }
+                }
+            }
+            // Handle general missing symbols (stale .class files from edited dependencies)
+            if (code.equals("compiler.err.cant.resolve")) {
+                var symbolName = extractSymbolName(err);
+                if (symbolName != null && !symbolName.isEmpty()) {
+                    var location = findSourceFile(symbolName);
+                    if (location != FILE_NOT_FOUND) {
+                        LOG.info("[compile] stale-classfile: adding source for " + symbolName + " at " + location);
+                        addFiles.add(location);
+                    }
                 }
             }
         }
@@ -225,12 +128,10 @@ public class CompileBatch implements AutoCloseable {
 
     private Path findPackagePrivateClass(String packageName, String className) {
         for (var file : FileStore.list(packageName)) {
-            var parse = parent.parse(file);
-            for (var declaration : parse.root().getTypeDecls()) {
-                if (!(declaration instanceof ClassTree)) continue;
-                var cls = (ClassTree) declaration;
-                var isPublic = cls.getModifiers().getFlags().contains(Modifier.PUBLIC);
-                if (isPublic) continue;
+            var parse = Parser.parseJavaFileObject(new SourceFileObject(file));
+            for (var declaration : parse.root.getTypeDecls()) {
+                if (!(declaration instanceof ClassTree cls)) continue;
+                if (cls.getModifiers().getFlags().contains(Modifier.PUBLIC)) continue;
                 if (cls.getSimpleName().contentEquals(className)) {
                     return file;
                 }
@@ -239,14 +140,87 @@ public class CompileBatch implements AutoCloseable {
         return FILE_NOT_FOUND;
     }
 
+    /** Extract the missing symbol name from a "cannot resolve symbol" diagnostic.
+     *  The error message format is: "cannot find symbol\n  symbol:   method foo()\n  location: class Bar"
+     *  We extract the symbol name (without trailing () for methods). */
+    private String extractSymbolName(Diagnostic<? extends JavaFileObject> err) {
+        var msg = err.getMessage(java.util.Locale.US);
+        if (msg == null) return null;
+        var symbolPattern = java.util.regex.Pattern.compile("symbol:\\s+\\w+\\s+(\\S+)");
+        var matcher = symbolPattern.matcher(msg);
+        if (matcher.find()) {
+            var name = matcher.group(1);
+            if (name.endsWith("()")) name = name.substring(0, name.length() - 2);
+            return name;
+        }
+        return null;
+    }
+
+    /** Find a workspace source file that defines a type with the given simple name.
+     *  Searches all packages. Returns FILE_NOT_FOUND if nothing matches. */
+    private Path findSourceFile(String simpleName) {
+        for (var file : FileStore.all()) {
+            var fileName = file.getFileName().toString();
+            if (!fileName.endsWith(".java")) continue;
+            var fileBaseName = fileName.substring(0, fileName.length() - ".java".length());
+            if (!fileBaseName.equals(simpleName)) continue;
+            try {
+                var source = new SourceFileObject(file);
+                var parser = Parser.parseJavaFileObject(source);
+                for (var decl : parser.root.getTypeDecls()) {
+                    if (decl instanceof com.sun.source.tree.ClassTree cls) {
+                        if (cls.getSimpleName().toString().equals(simpleName)) {
+                            return file;
+                        }
+                    }
+                }
+            } catch (Exception ignored) {
+            }
+        }
+        return FILE_NOT_FOUND;
+    }
+
     @Override
     public void close() {
-        if (closed) return;
-        borrow.close();
         closed = true;
     }
 
-    /** Combine source path or class path entries using the system separator, for example ':' in unix */
+    static List<String> options(Set<Path> classPath, Set<String> addExports, List<String> extraArgs) {
+        var list = new ArrayList<String>();
+
+        Collections.addAll(list, "-classpath", joinPath(classPath));
+        if (!targetsJava8OrEarlier(extraArgs)) {
+            Collections.addAll(list, "--add-modules", "ALL-MODULE-PATH");
+        }
+
+        // Lombok AP intentionally disabled — types resolve from .class build output on classpath
+        Collections.addAll(list, "-proc:none");
+
+        Collections.addAll(list, "-g");
+        Collections.addAll(list, "-Xmaxerrs", "9999");
+        Collections.addAll(list, "-Xmaxwarns", "9999");
+        Collections.addAll(
+                list,
+                "-Xlint:cast",
+                "-Xlint:deprecation",
+                "-Xlint:empty",
+                "-Xlint:fallthrough",
+                "-Xlint:finally",
+                "-Xlint:path",
+                "-Xlint:unchecked",
+                "-Xlint:varargs",
+                "-Xlint:static");
+        list.addAll(extraArgs);
+        var sortedExports = new ArrayList<>(addExports);
+        Collections.sort(sortedExports);
+        for (var export : sortedExports) {
+            list.add("--add-exports");
+            list.add(export + "=ALL-UNNAMED");
+        }
+
+        return list;
+    }
+
     private static String joinPath(Collection<Path> classOrSourcePath) {
         return classOrSourcePath.stream()
                 .map(Path::toString)
@@ -254,147 +228,26 @@ public class CompileBatch implements AutoCloseable {
                 .collect(Collectors.joining(File.pathSeparator));
     }
 
-    static List<String> options(
-            Set<Path> classPath, Set<String> addExports, List<String> extraArgs, boolean lombokPresent) {
-        var list = new ArrayList<String>();
-
-        Collections.addAll(list, "-classpath", joinPath(classPath));
-        // Source path allows javac to resolve workspace types from source rather than
-        // stale .class files, enabling cross-file error detection without full recompilation.
-        var sourceRoots = FileStore.workspaceRoots();
-        if (!sourceRoots.isEmpty()) {
-            Collections.addAll(list, "-sourcepath", joinPath(sourceRoots));
-        }
-        if (!targetsJava8OrEarlier(extraArgs)) {
-            Collections.addAll(list, "--add-modules", "ALL-MODULE-PATH");
-        }
-        // Collections.addAll(list, "-verbose");
-
-        if (lombokPresent) {
-            // Bind AP directly to Lombok to avoid processor discovery work on each diagnostics run.
-            Collections.addAll(list, "-proc:full");
-            Collections.addAll(list, "-processor", "lombok.launch.AnnotationProcessorHider$AnnotationProcessor");
-            var processorPath = lombokProcessorPath(classPath);
-            if (!processorPath.isEmpty()) {
-                Collections.addAll(list, "-processorpath", processorPath);
-            }
-        } else {
-            Collections.addAll(list, "-proc:none");
-        }
-
-        Collections.addAll(list, "-g");
-        // You would think we could do -Xlint:all,
-        // but some lints trigger fatal errors in the presence of parse errors
-        Collections.addAll(
-                list,
-                "-Xlint:cast",
-                "-Xlint:deprecation",
-                "-Xlint:empty",
-                "-Xlint:fallthrough",
-                "-Xlint:finally",
-                "-Xlint:path",
-                "-Xlint:unchecked",
-                "-Xlint:varargs",
-                "-Xlint:static");
-        list.addAll(extraArgs);
-        var sortedExports = new ArrayList<>(addExports);
-        Collections.sort(sortedExports);
-        for (var export : sortedExports) {
-            list.add("--add-exports");
-            list.add(export + "=ALL-UNNAMED");
-        }
-
-        return list;
-    }
-
-    static List<String> optionsForFastAp(
-            Set<Path> classPath, Set<String> addExports, List<String> extraArgs, boolean lombokPresent) {
-        var list = options(classPath, addExports, extraArgs, lombokPresent);
-        if (lombokPresent) {
-            // Run AP + attribution, but stop before FLOW so completion stays lightweight.
-            Collections.addAll(list, "-XDshould-stop.ifNoError=ATTR", "-XDshould-stop.ifError=ATTR");
-        }
-        return list;
-    }
-
-    private static String lombokProcessorPath(Set<Path> classPath) {
-        return classPath.stream()
-                .filter(CompileBatch::isLombokJar)
-                .map(Path::toString)
-                .collect(Collectors.joining(File.pathSeparator));
-    }
-
-    private static boolean isLombokJar(Path path) {
-        var name = path.getFileName().toString().toLowerCase(Locale.ROOT);
-        return name.startsWith("lombok") && (name.endsWith(".jar") || name.endsWith("-all.jar"));
-    }
-
-    /**
-     * Create compilation options with annotation processing disabled.
-     * Used for retrying compilation after AP failure.
-     */
-    static List<String> optionsWithoutAP(Set<Path> classPath, Set<String> addExports, List<String> extraArgs) {
-        var list = new ArrayList<String>();
-        Collections.addAll(list, "-classpath", joinPath(classPath));
-        var sourceRoots = FileStore.workspaceRoots();
-        if (!sourceRoots.isEmpty()) {
-            Collections.addAll(list, "-sourcepath", joinPath(sourceRoots));
-        }
-        if (!targetsJava8OrEarlier(extraArgs)) {
-            Collections.addAll(list, "--add-modules", "ALL-MODULE-PATH");
-        }
-        Collections.addAll(list, "-proc:none");
-        Collections.addAll(list, "-g");
-        Collections.addAll(
-                list,
-                "-Xlint:cast",
-                "-Xlint:deprecation",
-                "-Xlint:empty",
-                "-Xlint:fallthrough",
-                "-Xlint:finally",
-                "-Xlint:path",
-                "-Xlint:unchecked",
-                "-Xlint:varargs",
-                "-Xlint:static");
-        list.addAll(extraArgs);
-        var sortedExports = new ArrayList<>(addExports);
-        Collections.sort(sortedExports);
-        for (var export : sortedExports) {
-            list.add("--add-exports");
-            list.add(export + "=ALL-UNNAMED");
-        }
-        return list;
-    }
-
     private static boolean targetsJava8OrEarlier(List<String> extraArgs) {
         for (int i = 0; i < extraArgs.size() - 1; i++) {
             var arg = extraArgs.get(i);
-            if (!"--release".equals(arg) && !"-source".equals(arg) && !"-target".equals(arg)) {
-                continue;
-            }
+            if (!"--release".equals(arg) && !"-source".equals(arg) && !"-target".equals(arg)) continue;
             var level = parseJavaLevel(extraArgs.get(i + 1));
-            if (level > 0) {
-                return level <= 8;
-            }
+            if (level > 0) return level <= 8;
         }
         return false;
     }
 
     private static int parseJavaLevel(String value) {
-        if (value == null || value.isBlank()) {
-            return -1;
-        }
-        if (value.startsWith("1.")) {
-            value = value.substring(2);
-        }
-        try {
-            return Integer.parseInt(value);
-        } catch (NumberFormatException e) {
-            return -1;
-        }
+        if (value == null || value.isBlank()) return -1;
+        if (value.startsWith("1.")) value = value.substring(2);
+        try { return Integer.parseInt(value); } catch (NumberFormatException e) { return -1; }
     }
 
     private boolean isValidFileRange(Diagnostic<? extends JavaFileObject> d) {
-        return d.getSource().toUri().getScheme().equals("file") && d.getStartPosition() >= 0 && d.getEndPosition() >= 0;
+        return d.getSource().toUri().getScheme().equals("file")
+                && d.getStartPosition() >= 0
+                && d.getEndPosition() >= 0;
     }
+
 }
